--- a/microservices/helium-dada-service/pom.xml
+++ b/microservices/helium-dada-service/pom.xml
@@ -89,5 +89,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-spring-boot-starter</artifactId>
+			<version>${keycloak.version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
