--- a/microservices/helium-dada-service/src/main/resources/application-local.properties
+++ b/microservices/helium-dada-service/src/main/resources/application-local.properties
@@ -32,6 +32,14 @@ spring.data.mongodb.database=hel_dada
 #spring.jpa.show-sql=false
 #spring.jpa.properties.hibernate.format_sql=false
 
+keycloak.realm=GOIB
+keycloak.auth-server-url=http://docker.limit.es:21234/auth
+keycloak.resource=goib-default
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+
 # OpenAPI
 springdoc.swagger-ui.url=/openapi.yaml
 springdoc.swagger-ui.path=/api/documentation.html
