--- a/microservices/helium-domini-service/pom.xml
+++ b/microservices/helium-domini-service/pom.xml
@@ -50,6 +50,12 @@
 <!--        </dependency>-->
 
         <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-spring-boot-starter</artifactId>
+            <version>${keycloak.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.hazelcast</groupId>
             <artifactId>hazelcast</artifactId>
         </dependency>
