--- a/microservices/helium-domini-service/src/main/resources/application-local.properties
+++ b/microservices/helium-domini-service/src/main/resources/application-local.properties
@@ -29,5 +29,13 @@ spring.jpa.properties.hibernate.format_sql=false
 springdoc.swagger-ui.url=/openapi.yaml
 springdoc.swagger-ui.path=/api/documentation.html
 
+keycloak.realm=GOIB
+keycloak.auth-server-url=http://docker.limit.es:21234/auth
+keycloak.resource=goib-default
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+
 # Helium
 es.caib.helium.domini.intern.service.host=http://localhost:8080/helium/ws/DominiIntern
