--- a/microservices/helium-expedient-service/src/main/resources/application-local.properties
+++ b/microservices/helium-expedient-service/src/main/resources/application-local.properties
@@ -4,14 +4,54 @@ server.port=8085
 spring.zipkin.enabled=false
 spring.cloud.discovery.enabled=false
 
+management.health.elasticsearch.enabled= false
+management.health.jms.enabled=false
+
+#keycloak.auth-server-url=http://localhost:8180/auth
+keycloak.realm=GOIB
+keycloak.auth-server-url=http://docker.limit.es:21234/auth
+keycloak.resource=goib-default
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+
+#keycloak.security-constraints[0].authRoles[0]=HEL_USER
+#keycloak.security-constraints[0].authRoles[1]=HEL_ADMIN
+#keycloak.security-constraints[0].securityCollections[0].patterns[0]=/api/v1/expedients/*
+#keycloak.security-constraints[0].securityCollections[0].patterns[1]=/api/v1/processos/*
+#keycloak.security-constraints[0].securityCollections[0].patterns[2]=/api/v1/tasques/*
+
+#spring.artemis.mode=native
+#spring.artemis.broker-url=tcp://localhost:8161
+#spring.artemis.user=artemis
+#spring.artemis.password=simetraehcapa
+
 # OracleDB connection settings
+
 # PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/helium_ms_expedient
 spring.datasource.username=helium_ms_expedient
 spring.datasource.password=helium_ms_expedient
 
+# OracleDB connection settings
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# spring.datasource.url=jdbc:oracle:thin:@//localhost:49161/xe
+# spring.datasource.username=hel_expedient
+# spring.datasource.password=hel_expedient
+
+# HikariCP settings
+# spring.datasource.hikari.minimumIdle=5
+# spring.datasource.hikari.maximumPoolSize=20
+# spring.datasource.hikari.idleTimeout=30000
+# spring.datasource.hikari.maxLifetime=2000000
+# spring.datasource.hikari.connectionTimeout=30000
+# spring.datasource.hikari.poolName=HikariPoolExpedients
+
 # JPA settings
+# spring.jpa.database=oracle
+# spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
@@ -19,3 +59,11 @@ spring.jpa.properties.hibernate.format_sql=false
 # OpenAPI
 springdoc.swagger-ui.url=/openapi.yaml
 springdoc.swagger-ui.path=/api/documentation.html
+
+# logging.level.es.caib.helium=DEBUG
+# logging.level.es.caib.helium.client=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.springframework.security=TRACE
+
+# feign.client.config.default.loggerLevel=full
