--- a/microservices/helium-monitor-service/src/main/resources/application-local.properties
+++ b/microservices/helium-monitor-service/src/main/resources/application-local.properties
@@ -15,6 +15,14 @@ spring.artemis.password=simetraehcapa
 # Classe de implementacio de BddService
 es.caib.helium.monitor.service.class=es.caib.helium.monitor.service.MongoBddService
 
+keycloak.realm=GOIB
+keycloak.auth-server-url=http://docker.limit.es:21234/auth
+keycloak.resource=goib-default
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+
 #
 ## HikariCP settings
 #spring.datasource.hikari.minimumIdle=5
