--- a/microservices/helium-camunda/pom.xml
+++ b/microservices/helium-camunda/pom.xml
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <scope>provided</scope>
+<!--            <scope>provided</scope>-->
             <exclusions>
                 <exclusion>
                     <artifactId>logback-classic</artifactId>
@@ -91,10 +91,15 @@
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-core</artifactId>
+            <artifactId>keycloak-spring-boot-starter</artifactId>
             <version>${keycloak.version}</version>
-            <scope>provided</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.keycloak</groupId>-->
+<!--            <artifactId>keycloak-core</artifactId>-->
+<!--            <version>${keycloak.version}</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.camunda.bpm</groupId>
