--- a/microservices/helium-integracio-service/src/main/resources/application-local.properties
+++ b/microservices/helium-integracio-service/src/main/resources/application-local.properties
@@ -8,6 +8,14 @@ es.caib.helium.integracio.database.jdbc.password=integracio_user_password
 es.caib.helium.integracio.database.jdbc.schema=integracio
 #spring.jpa.properties.hibernate.default_schema=integracio
 
+keycloak.realm=GOIB
+keycloak.auth-server-url=http://docker.limit.es:21234/auth
+keycloak.resource=goib-default
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+
 # Popietats servei OppenOfficeUtils ConverterConfig.java
 
 es.caib.helium.conversio.openoffice.host=127.0.0.1
