--- a/microservices/helium-expedient-service/pom.xml
+++ b/microservices/helium-expedient-service/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>helium-client-service</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>es.caib.helium</groupId>-->
+<!--			<artifactId>helium-transaction-client</artifactId>-->
+<!--			<version>1.0.0</version>-->
+<!--		</dependency>-->
 
 
 		<dependency>
