--- a/microservices/helium-dada-service/pom.xml
+++ b/microservices/helium-dada-service/pom.xml
@@ -22,13 +22,16 @@
 
 	<dependencies>
 	
-		<!-- Feign Client -->
 		<dependency>
 			<groupId>es.caib.helium</groupId>
 			<artifactId>helium-client-service</artifactId>
 			<version>1.0.0</version>
 		</dependency>
-		<!-- Feign Client -->
+<!--		<dependency>-->
+<!--			<groupId>es.caib.helium</groupId>-->
+<!--			<artifactId>helium-transaction-client</artifactId>-->
+<!--			<version>1.0.0</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -45,12 +48,12 @@
 		<dependency>
 			<groupId>org.hibernate.ogm</groupId>
 			<artifactId>hibernate-ogm-mongodb</artifactId>
-			<version>5.4.0.Final</version>
+			<version>5.4.1.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.narayana.jta</groupId>
 			<artifactId>narayana-jta</artifactId>
-			<version>5.9.2.Final</version>
+			<version>5.12.1.Final</version>
 		</dependency>
 
 		<!-- Junit 5 -->
