--- a/microservices/helium-gateway/pom.xml
+++ b/microservices/helium-gateway/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>es.caib.helium</groupId>
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
+        <spring-cloud.version>2020.0.4</spring-cloud.version>
         <logstash.logback.version>6.6</logstash.logback.version>
         <spring.cloud.zipkin.version>3.0.0-M3</spring.cloud.zipkin.version>
         <docker.image.prefix>mshelium</docker.image.prefix>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>6.3</version>
+            <version>${logstash.logback.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -80,7 +80,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.33.0</version>
+                <version>0.37.0</version>
                 <configuration>
                     <verbose>true</verbose>
                     <images>
