#1531 resoldre errors json i keycloak

--- a/microservices/helium-jbpm/helium-jbpm-engine/src/main/resources/application.properties
+++ b/microservices/helium-jbpm/helium-jbpm-engine/src/main/resources/application.properties
@@ -6,3 +6,5 @@ eureka.decoderName=JacksonJson
 
 # Codi del motor JBPM a l'hora de crear processos
 es.caib.helium.engine.codi=JBPM01
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
