--- a/microservices/helium-jbpm/helium-jbpm-api/pom.xml
+++ b/microservices/helium-jbpm/helium-jbpm-api/pom.xml
@@ -72,5 +72,10 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>com.fasterxml.jackson.core</groupId>
+        	<artifactId>jackson-databind</artifactId>
+        	<version>2.8.7</version>
+        </dependency>
     </dependencies>
 </project>
