--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -235,11 +235,6 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.12</version>
-		</dependency>
-		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>1.5.5</version>
@@ -356,7 +351,7 @@
 			<artifactId>jsrender</artifactId>
 			<version>1.0.0-rc.70</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.7.5</version>
@@ -367,6 +362,12 @@
 		    <version>2.7.9.5</version>
 		</dependency>
 		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.12</version>
+		</dependency>
+ -->
+ 		<dependency>
 			<groupId>org.fundaciobit.plugins</groupId>
 			<artifactId>plugins-api</artifactId>
 			<version>1.0.0</version>
