#1545 Canviar a l'API de firma simple del portasignatures
- Tractar la resposta i adaptar Helium a la informació retornada per la
firma

--- a/versions/3.2.114/1545.properties
+++ b/versions/3.2.114/1545.properties
@@ -15,3 +15,8 @@ app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_passwor
 
 # Perfil seleccionat en la firma en cas de voler especificar un perfil diferent al per defecte per l'ususuar
 app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_perfil=
+
+# ##################### #
+# PROPERTIES ELIMINADES #
+# ##################### #
+app.plugin.firma.portafib.username=dgdt-pre
