--- a/versions/3.2.114/1545.properties
+++ b/versions/3.2.114/1545.properties
@@ -5,8 +5,8 @@
 # PROPERTIES MODIFICADES #
 # ###################### #
 
-app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_url=https://proves.caib.es/portafib/ws/v1/PortaFIBPassarelaDeFirmaEnServidor
-app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafibpass
+app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_url=https://dev.caib.es/portafib/common/rest/apifirmaenservidorsimple/v1/
+app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_username=$helium_portafib
 app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_password=****
 
 # ################### #
@@ -15,8 +15,3 @@ app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_passwor
 
 # Perfil seleccionat en la firma en cas de voler especificar un perfil diferent al per defecte per l'ususuar
 app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_perfil=
-
-# ##################### #
-# PROPERTIES ELIMINADES #
-# ##################### #
-app.plugin.firma.portafib.username=dgdt-pre
