#1553 Canviar la integració amb el Portafirmes per usar l'API REST
- Canvi de la petició de firma a api rest

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -121,6 +121,19 @@
 			<artifactId>portafib-ws-api</artifactId>
 			<version>1.1</version>
 		</dependency>
+		
+		<!-- Portafirmes API REST -->
+		<dependency>
+			<artifactId>apifirmaasyncsimple-api</artifactId>
+			<groupId>org.fundaciobit.apisib.apifirmaasyncsimple</groupId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+	      <artifactId>apifirmaasyncsimple-jersey</artifactId>
+	      <groupId>org.fundaciobit.apisib.apifirmaasyncsimple</groupId>
+	      <version>2.0.1</version>
+	    </dependency>
+		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
