#1553 Canviar la integració amb el Portafirmes per usar l'API REST
- Callback REST del Portafirmes

--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -382,6 +382,33 @@
 			<artifactId>plugin-signatureweb-portafib</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<!-- Callback PortaFIB REST -->
+	    <dependency>  
+	      <artifactId>portafib-callback-beans</artifactId>
+	      <groupId>es.caib.portafib</groupId>
+	      <version>1.1</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>com.sun.jersey</groupId>
+	      <artifactId>jersey-server</artifactId>
+	      <version>1.8</version>
+	    </dependency>
+		<dependency>
+		  <groupId>com.sun.jersey</groupId>
+		  <artifactId>jersey-json</artifactId>
+		  <version>1.8</version>
+		  <exclusions>
+		    <exclusion>
+		      <groupId>stax</groupId>
+		      <artifactId>stax-api</artifactId>
+		    </exclusion>
+		    <exclusion>  
+		      <groupId>com.sun.xml.bind</groupId>
+		      <artifactId>jaxb-impl</artifactId>
+		    </exclusion>
+		  </exclusions>
+		</dependency>	
+	    
 		<dependency>
 			<groupId>org.fundaciobit.plugins</groupId>
 			<artifactId>plugin-signatureweb-miniappletinclient</artifactId>
