--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -167,6 +167,9 @@
 			<!-- Integracio Notib -->
 			<url-pattern>/rest/notib</url-pattern>
 			<url-pattern>/rest/notib/notificaCanvi</url-pattern>
+			<!-- Integracio PortaFIB -->
+			<url-pattern>/rest/portafib/callback</url-pattern>
+			<url-pattern>/rest/portafib/callback/event</url-pattern>
 			<!-- Selenium-integraciones.begin -->
 			<url-pattern>/ws/CustodiaDocumentos</url-pattern>
 			<url-pattern>/ws/portafirmas</url-pattern>
