--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -58,18 +58,18 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/esbcim-wsdl-1.0.jar</systemPath>
 	  	</dependency>
-	  	<dependency>
-			<groupId>es.caib</groupId>
-			<artifactId>mcgdws</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/mcgdws.jar</systemPath>
-	  	</dependency>
 		<dependency>
 			<groupId>es.caib.portafib</groupId>
 			<artifactId>portafib-ws-callback-api</artifactId>
 			<version>${portafib.version}</version>
 		</dependency>
+		<dependency>  
+	      <artifactId>portafib-callback-beans</artifactId>
+	      <groupId>es.caib.portafib</groupId>
+	      <version>1.1</version>
+	      <scope>test</scope>
+	    </dependency>
+			
 	  	<dependency>
 			<groupId>axis</groupId>
 			<artifactId>axis</artifactId>
