--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -4,9 +4,9 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.conselldemallorca.helium</groupId>
+		<groupId>es.caib.helium</groupId>
 		<artifactId>helium</artifactId>
-		<version>3.2</version>
+		<version>4.0.0</version>
 	</parent>
 	<artifactId>helium-plugin-impl</artifactId>
 	<properties>
@@ -121,6 +121,19 @@
 			<artifactId>portafib-ws-api</artifactId>
 			<version>1.1</version>
 		</dependency>
+		
+		<!-- Portafirmes API REST -->
+		<dependency>
+			<artifactId>apifirmaasyncsimple-api</artifactId>
+			<groupId>org.fundaciobit.apisib.apifirmaasyncsimple</groupId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+	      <artifactId>apifirmaasyncsimple-jersey</artifactId>
+	      <groupId>org.fundaciobit.apisib.apifirmaasyncsimple</groupId>
+	      <version>2.0.1</version>
+	    </dependency>
+	    
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
