--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -2,9 +2,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.conselldemallorca.helium</groupId>
+		<groupId>es.caib.helium</groupId>
 		<artifactId>helium</artifactId>
-		<version>3.2</version>
+		<version>4.0.0</version>
 	</parent>
 	<artifactId>helium-ws</artifactId>
 	<properties>
@@ -57,13 +57,6 @@
 			<version>1.0</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/esbcim-wsdl-1.0.jar</systemPath>
-	  	</dependency>
-	  	<dependency>
-			<groupId>es.caib</groupId>
-			<artifactId>mcgdws</artifactId>
-			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/mcgdws.jar</systemPath>
 	  	</dependency>
 		<dependency>
 			<groupId>es.caib.portafib</groupId>
