#1554 Firma web per API REST
- Nou plugin

--- a/helium-plugin-api/pom.xml
+++ b/helium-plugin-api/pom.xml
@@ -21,6 +21,30 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		<!--mgonzalez-->
+		<dependency>
+			<artifactId>apifirmasimple-api</artifactId>
+			<groupId>org.fundaciobit.apisib.apifirmasimple</groupId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<artifactId>apifirmasimple-jersey</artifactId>
+			<groupId>org.fundaciobit.apisib.apifirmasimple</groupId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<artifactId>apifirmasimple-api</artifactId>
+			<groupId>org.fundaciobit.apisib.apifirmasimple</groupId>
+			<version>1.0</version>
+		</dependency>
+		<!--END mgonzalez-->
 	</dependencies>
 	<build>
 		<plugins>
