--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -351,7 +351,7 @@
 			<artifactId>jsrender</artifactId>
 			<version>1.0.0-rc.70</version>
 		</dependency>
-<!-- 		<dependency>
+ 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.7.5</version>
@@ -364,9 +364,8 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.12</version>
+			<version>1.7.1</version>
 		</dependency>
- -->
  		<dependency>
 			<groupId>org.fundaciobit.plugins</groupId>
 			<artifactId>plugins-api</artifactId>
