--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -404,6 +404,11 @@
 	      <groupId>es.caib.portafib</groupId>
 	      <version>1.1</version>
 	    </dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.19.4</version>
+		</dependency>
 	    <dependency>
 	      <groupId>com.sun.jersey</groupId>
 	      <artifactId>jersey-server</artifactId>
