#1420 Revisar el mètodes de serveis del WS de Tramitació externa

--- a/helium-selenium/src/test/resources/test-dev.properties
+++ b/helium-selenium/src/test/resources/test-dev.properties
@@ -4,6 +4,7 @@
 
 # URL d'Helium
 app.base.url=http://10.35.3.231:8080/helium
+#app.base.url=http://localhost:8080/helium
 
 # Autentiació
 test.base.url.inici.seycon=false
@@ -15,6 +16,8 @@ test.entorn.titol=Test
 # Usuari de proves
 test.usuari.codi=admin
 test.usuari.password=admin
+#test.usuari.codi=danielm
+#test.usuari.password=danielm
 
 # Adreça base de la aplicació Helium
 test.base.url=http://admin:admin@10.35.3.231:8080/helium/v3
@@ -43,6 +46,7 @@ app.forms.embedded.port=9080
 # WS per tramitació externa
 ####
 app.tramitacio.url=http://10.35.3.231:8080/helium/ws/TramitacioService
+#app.tramitacio.url=http://localhost:8080/helium/ws/TramitacioService
 
 ####
 # Portasignatures
