#1577 Incorporar en el grup de handlers predefinits en la gestió d'expedients la integració amb PINBAL

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -348,3 +348,18 @@ app.notificacio.plugin.class=net.conselldemallorca.helium.integracio.plugins.not
 app.notificacio.plugin.url=http://localhost:8180/notib
 app.notificacio.plugin.username=helapp
 app.notificacio.plugin.password=helapp
+
+########################
+# Integració amb PINBAL #
+########################
+app.pinbal.plugin.class=net.conselldemallorca.helium.integracio.plugins.pinbal.PinbalPlugin
+# Entorn Limit
+#app.pinbal.plugin.url=http://10.35.3.118:8180/pinbal
+#app.pinbal.plugin.username=ripea_pinbal
+#app.pinbal.plugin.password=ripea_pinbal
+# Entorn dev caib
+app.pinbal.plugin.url=https://proves.caib.es/pinbal
+app.pinbal.plugin.username=$ripea_pinbal
+app.pinbal.plugin.password=ripea_pinbal
+app.pinbal.plugin.perfil=
+app.pinbal.plugin.isJBoss=false
