--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -297,7 +297,11 @@
 			<artifactId>jersey-client</artifactId>
 			<version>1.19.4</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>es.caib.pinbal</groupId>
+			<artifactId>pinbal-client</artifactId>
+			<version>1.4.33</version>		
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
