Tancament i correcció Helium 3.2.114.5 (2022.07.14 13:00)
- Propietat correcte per consultar Distribucio i correcció del JSP del
detall de les anotacions

--- a/doc/resources/properties/updates/helium_update_3.2.114.5.properties
+++ b/doc/resources/properties/updates/helium_update_3.2.114.5.properties
@@ -4,4 +4,4 @@
 
 # #1593 Assenyalar documents amb firma invàlida o estat esborrany provinents de Distribucio 
 
-net.conselldemallorca.helium.distribucio.BackofficeIntegracioRestClient.ws.url=https://dev.caib.es/distribucioapi/interna
+net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://dev.caib.es/distribucioapi/interna
