--- a/versions/3.2.114.5/1593.properties
+++ b/versions/3.2.114.5/1593.properties
@@ -3,5 +3,5 @@
 #####################
 # PROPIETATS MODIFICADES
 #####################
-net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://dev.caib.es/distribucioapi/interna
+net.conselldemallorca.helium.distribucio.backofficeIntegracio.ws.url=https://proves.caib.es/distribucioapi/interna
 
