--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -326,11 +326,11 @@
 			</exclusions>
 		</dependency>
 		-->
-		<!-- plugin-arxiu-caib 2.0.19 --> 
+		<!-- plugin-arxiu-caib --> 
 		<dependency>
 			<groupId>org.fundaciobit.pluginsib.arxiu</groupId>
 			<artifactId>pluginsib-arxiu-caib</artifactId>
-			<version>2.0.20</version>
+			<version>2.0.21</version>
 			<exclusions>
 				<exclusion>
 					<groupId>log4j</groupId>
