--- a/versions/3.2.115/1554.properties
+++ b/versions/3.2.115/1554.properties
@@ -2,6 +2,14 @@
 #1545 Canviar a l'API de firma simple del portasignatures 
 
 # ###################### #
+# PROPERTIES MODIFICADES #
+# ###################### #
+
+app.plugin.passarelafirma.1.class=org.fundaciobit.apisib.apifirmasimple.v1.ApiFirmaWebSimple
+app.plugin.passarelafirma.1.nom=Firma dins PortaFIB amb API REST Simple
+app.plugin.passarelafirma.1.desc=Plugin de firma que usa PortaFIB API REST Simple
+
+# ###################### #
 # PROPERTIES COMENTADES #
 # ###################### #
 
@@ -12,11 +20,6 @@
 # ################### #
 # PROPERTIES AFEGIDES #
 # ################### #
-
-
-app.plugin.passarelafirma.1.class=org.fundaciobit.apisib.apifirmasimple.v1.ApiFirmaWebSimple
-app.plugin.passarelafirma.1.nom=Firma dins PortaFIB amb API REST Sïmple
-app.plugin.passarelafirma.1.desc=Plugin de firma que usa PortaFIB API REST Simple
 
 app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.endpoint=https://proves.caib.es/portafib/common/rest/apifirmawebsimple/v1/
 app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.username=$helium_portafibpass
