Validació i correccions d'Helium
- #1420 Correccions tramitació externa

--- a/helium-selenium/src/test/resources/test-dev.properties
+++ b/helium-selenium/src/test/resources/test-dev.properties
@@ -3,8 +3,8 @@
 ################################
 
 # URL d'Helium
-app.base.url=http://10.35.3.231:8080/helium
-#app.base.url=http://localhost:8080/helium
+#app.base.url=http://10.35.3.231:8080/helium
+app.base.url=http://localhost:8080/helium
 
 # Autentiació
 test.base.url.inici.seycon=false
@@ -45,8 +45,8 @@ app.forms.embedded.port=9080
 ####
 # WS per tramitació externa
 ####
-app.tramitacio.url=http://10.35.3.231:8080/helium/ws/TramitacioService
-#app.tramitacio.url=http://localhost:8080/helium/ws/TramitacioService
+#app.tramitacio.url=http://10.35.3.231:8080/helium/ws/TramitacioService
+app.tramitacio.url=http://localhost:8080/helium/ws/TramitacioService
 
 ####
 # Portasignatures
