--- a/helium-selenium/src/test/resources/test.properties
+++ b/helium-selenium/src/test/resources/test.properties
@@ -19,4 +19,4 @@ webdriver.firefox.binary=C:\\Program Files (x86)\\Mozilla Firefox 46.0\\firefox.
 test.truststore=C:\\temp\\truststore.jks
 
 # Esborrar els expedients de test creats en acabar el test
-test.expedient.esborrar=false
+test.expedient.esborrar=true
