Proves de validació i correccions Helium 3.2.115
- #1577 Falten les propietats per PINBAL
- #1578 Falten les propietats per regles de Distribucio

--- a/versions/3.2.115/1577.properties
+++ b/versions/3.2.115/1577.properties
@@ -10,5 +10,5 @@
 ########################
 app.pinbal.plugin.class=net.conselldemallorca.helium.integracio.plugins.pinbal.PinbalPlugin
 app.pinbal.plugin.url=https://proves.caib.es/pinbalapi
-app.pinbal.plugin.username=helium_pinbal
+app.pinbal.plugin.username=$helium_pinbal
 app.pinbal.plugin.password=****
