--- a/versions/3.2.115/1553.properties
+++ b/versions/3.2.115/1553.properties
@@ -7,7 +7,7 @@
 
 app.portasignatures.plugin.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortasignaturesPluginPortafibSimple
 app.portasignatures.plugin.portafib.username=$helium_portafib
-app.portasignatures.plugin.portafib.password=helium_portafib
+app.portasignatures.plugin.portafib.password=****
 
 
 # ################### #
