--- a/versions/3.2.115/1554.properties
+++ b/versions/3.2.115/1554.properties
@@ -1,5 +1,5 @@
 
-#1545 Canviar a l'API de firma simple del portasignatures 
+#1554 Canviar a l'API de firma simple del portasignatures 
 
 # ###################### #
 # PROPERTIES MODIFICADES #
@@ -10,12 +10,12 @@ app.plugin.passarelafirma.1.nom=Firma dins PortaFIB amb API REST Simple
 app.plugin.passarelafirma.1.desc=Plugin de firma que usa PortaFIB API REST Simple
 
 # ###################### #
-# PROPERTIES COMENTADES #
+# PROPERTIES ESBORRADES #
 # ###################### #
 
 #app.plugin.passarelafirma.1.plugins.signatureweb.portafib.api_passarela_url=https://proves.caib.es/portafib/ws/v1/PortaFIBPassarelaDeFirmaWeb
 #app.plugin.passarelafirma.1.plugins.signatureweb.portafib.api_passarela_username=$helium_portafibpass
-#app.plugin.passarelafirma.1.plugins.signatureweb.portafib.api_passarela_password=helium_portafibpass
+#app.plugin.passarelafirma.1.plugins.signatureweb.portafib.api_passarela_password=****
 
 # ################### #
 # PROPERTIES AFEGIDES #
@@ -23,6 +23,6 @@ app.plugin.passarelafirma.1.desc=Plugin de firma que usa PortaFIB API REST Simpl
 
 app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.endpoint=https://proves.caib.es/portafib/common/rest/apifirmawebsimple/v1/
 app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.username=$helium_portafibpass
-app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.password=helium_portafibpass
+app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.password=****
 app.plugin.passarelafirma.1.plugins.signatureweb.portafib.apifirmawebsimple.perfil=
 app.plugin.passarelafirma.1.validatesignature.afirmacxf.ignoreservercertificates=true
