--- a/versions/3.2.115/1578.properties
+++ b/versions/3.2.115/1578.properties
@@ -9,10 +9,10 @@
 # GESTIO DE REGLES A DISTRIBUCIO #
 # ############################## #
 
-app.helium.distribucio.regles.api.rest.url=http://10.35.3.232:8080/distribucio
+app.helium.distribucio.regles.api.rest.url=https://proves.caib.es/distribucio
 # Usuari amb rol DIS_REGLA
 app.helium.distribucio.regles.api.rest.usuari=$helium_distribucio
-app.helium.distribucio.regles.api.rest.password=helium_distribucio
+app.helium.distribucio.regles.api.rest.password=****
 app.helium.distribucio.regles.api.rest.codi.backoffice=HELIUM
 
 
