--- a/versions/3.2.115/1582.properties
+++ b/versions/3.2.115/1582.properties
@@ -5,5 +5,5 @@
 # PROPERTIES ELIMINADES #
 # ###################### #
 
-app.configuracio.redireccionar=true
+#app.configuracio.redireccionar=true
 
