--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -133,7 +133,13 @@
 	      <groupId>org.fundaciobit.apisib.apifirmaasyncsimple</groupId>
 	      <version>2.0.1</version>
 	    </dependency>
-		
+		<dependency>
+		    <groupId>org.glassfish.jersey.core</groupId>
+		    <artifactId>jersey-common</artifactId>
+		    <version>2.22.2</version>
+		    <scope>test</scope>
+		</dependency>
+				
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
