--- a/helium-selenium/src/test/resources/test-dev.properties
+++ b/helium-selenium/src/test/resources/test-dev.properties
@@ -20,7 +20,8 @@ test.usuari.password=admin
 #test.usuari.password=danielm
 
 # Adreça base de la aplicació Helium
-test.base.url=http://admin:admin@10.35.3.231:8080/helium/v3
+test.base.url=http://admin:admin@localhost:8080/helium/v3
+#test.base.url=http://admin:admin@10.35.3.231:8080/helium/v3
 
 # Tipus d'expedient per a les proves
 test.tipus.expedient.codi=test
@@ -45,8 +46,8 @@ app.forms.embedded.port=9080
 ####
 # WS per tramitació externa
 ####
-#app.tramitacio.url=http://10.35.3.231:8080/helium/ws/TramitacioService
 app.tramitacio.url=http://localhost:8080/helium/ws/TramitacioService
+#app.tramitacio.url=http://10.35.3.231:8080/helium/ws/TramitacioService
 
 ####
 # Portasignatures
