--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -433,6 +433,13 @@
 			<artifactId>plugin-signatureweb-miniappletinserver</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
