--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -313,24 +313,11 @@
 			<artifactId>tika-core</artifactId>
 			<version>1.18</version>
 		</dependency>
-		<!-- plugin-arxiu-caib 1.0.5 
-		<dependency>
-			<groupId>org.fundaciobit.plugins</groupId>
-			<artifactId>plugin-arxiu-caib</artifactId>
-			<version>1.0.5</version>
-			<exclusions>
-				<exclusion>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		-->
-		<!-- plugin-arxiu-caib --> 
+		<!-- plugin-arxiu-caib 1.0.5 -->
 		<dependency>
 			<groupId>org.fundaciobit.pluginsib.arxiu</groupId>
 			<artifactId>pluginsib-arxiu-caib</artifactId>
-			<version>2.0.25</version>
+			<version>2.0.25.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>log4j</groupId>
