--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.conselldemallorca.helium</groupId>
 	<artifactId>helium</artifactId>
-	<version>3.2</version>
+	<version>3.3.1</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.6</java.version>
-		<helium.version>3.2</helium.version>
+		<helium.version>3.3.1</helium.version>
 		<spring.version>3.2.17.RELEASE</spring.version>
 		<spring-security.version>3.1.3.RELEASE</spring-security.version>
 		<spring-data.version>1.1.0.RELEASE</spring-data.version>
@@ -84,6 +84,25 @@
 				</executions>
 			</plugin>
 		</plugins>
+<!--		<pluginManagement>-->
+<!--			<plugins>-->
+<!--				<plugin>-->
+<!--					<artifactId>maven-deploy-plugin</artifactId>-->
+<!--					<version>2.8.1</version>-->
+<!--					<configuration>-->
+<!--						<skip>true</skip>-->
+<!--					</configuration>-->
+<!--				</plugin>-->
+<!--				<plugin>-->
+<!--					<groupId>com.github.github</groupId>-->
+<!--					<artifactId>site-maven-plugin</artifactId>-->
+<!--					<version>0.12</version>-->
+<!--					<configuration>-->
+<!--						<skip>true</skip>-->
+<!--					</configuration>-->
+<!--				</plugin>-->
+<!--			</plugins>-->
+<!--		</pluginManagement>-->
 	</build>
 	<distributionManagement>
 		<repository>
@@ -103,6 +122,5 @@
              <name>GitHub GovernIB Maven Repository</name>
              <url>https://governib.github.io/maven/maven/</url>
         </repository>
-        
 	</repositories>
 </project>
