--- a/doc/resources/properties/global.properties
+++ b/doc/resources/properties/global.properties
@@ -184,6 +184,15 @@ app.portasignatures.plugin.usuari=HELIUM
 app.portasignatures.plugin.password=HELIUM
 app.portasignatures.plugin.checkcerts=false
 
+# ###
+# Integració amb l' API Plantilles de Flux de Firmes Simple
+# ###
+# Classe del plugin de portafirmes flux de firmes
+app.portafirmes.plugin.flux.firma.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortafirmesPluginPortafibFluxSimple
+app.portafirmes.plugin.flux.firma.url=https://dev.caib.es/portafib/common/rest/apiflowtemplatesimple/v1/
+app.portafirmes.plugin.flux.firma.usuari=$helium_portafib
+app.portafirmes.plugin.flux.firma.password=helium_portafib
+
 
 # ###
 # Plugin de validacio de firmes
