--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -133,6 +133,21 @@
 	      <groupId>org.fundaciobit.apisib.apifirmaasyncsimple</groupId>
 	      <version>2.0.1</version>
 	    </dependency>
+	   	<dependency>
+			<artifactId>apiplantillafluxsimple-jersey</artifactId>
+			<groupId>org.fundaciobit.apisib.apiplantillafluxsimple</groupId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
+			<artifactId>apiplantillafluxsimple-api</artifactId>
+			<groupId>org.fundaciobit.apisib.apiplantillafluxsimple</groupId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.sun.jersey</groupId>
+    		<artifactId>jersey-json</artifactId>
+   			 <version>1.8</version>
+		</dependency>
 		<dependency>
 		    <groupId>org.glassfish.jersey.core</groupId>
 		    <artifactId>jersey-common</artifactId>
