--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -277,6 +277,16 @@ app.portasignatures.plugin.password=HELIUM
 #app.portasignatures.plugin.checkcerts=false
 
 # ###
+# Integració amb l' API Plantilles de Flux de Firmes Simple
+# ###
+# Classe del plugin de portafirmes flux de firmes
+app.portafirmes.plugin.flux.firma.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortafirmesPluginPortafibFluxSimple
+app.portafirmes.plugin.flux.firma.url=https://dev.caib.es/portafib/common/rest/apiflowtemplatesimple/v1/
+app.portafirmes.plugin.flux.firma.usuari=$ripea_portafib
+app.portafirmes.plugin.flux.firma.password=ripea_portafib
+
+
+# ###
 # Integració amb formularis externs
 # ###
 app.forms.actiu=true
