--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -69,7 +69,21 @@
 	      <version>1.1</version>
 	      <scope>test</scope>
 	    </dependency>
-			
+	   <dependency>
+			<artifactId>apiplantillafluxsimple-jersey</artifactId>
+			<groupId>org.fundaciobit.apisib.apiplantillafluxsimple</groupId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
+			<artifactId>apiplantillafluxsimple-api</artifactId>
+			<groupId>org.fundaciobit.apisib.apiplantillafluxsimple</groupId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>com.sun.jersey</groupId>
+    		<artifactId>jersey-json</artifactId>
+   			 <version>1.8</version>
+		</dependency>
 	  	<dependency>
 			<groupId>axis</groupId>
 			<artifactId>axis</artifactId>
@@ -155,4 +169,11 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+             <id>github-governib-maven-repos</id>
+             <name>GitHub GovernIB Maven Repository</name>
+             <url>https://governib.github.io/maven/maven/</url>
+        </repository>
+	</repositories>
 </project>
