#1645 Incloure l'edició dels fluxos de firma a Helium - FASE 2

--- a/doc/resources/properties/updates/helium_update_3.2.117.properties
+++ b/doc/resources/properties/updates/helium_update_3.2.117.properties
@@ -1,4 +1,15 @@
 # ###################### #
+# PROPERTIES MODIFICADES #
+# ###################### #
+
+#1645 Incloure l'edició dels fluxos de firma a Helium
+
+#app.portasignatures.plugin.portafib.base.url=https://se.caib.es/portafib
+app.portasignatures.plugin.portafib.firmasimpleasync.url=https://se.caib.es/portafib/common/rest/apifirmaasyncsimple/v2
+
+
+
+# ###################### #
 # PROPIETATS AFEGIDES    #
 # ###################### #
 
@@ -6,8 +17,6 @@
 # ###
 # Integració amb l' API Plantilles de Flux de Firmes Simple
 # ###
-# Classe del plugin de portafirmes flux de firmes
-app.portafirmes.plugin.flux.firma.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortafirmesPluginPortafibFluxSimple
 app.portafirmes.plugin.flux.firma.url=https://dev.caib.es/portafib/common/rest/apiflowtemplatesimple/v1/
-app.portafirmes.plugin.flux.firma.usuari=$ripea_portafib
-app.portafirmes.plugin.flux.firma.password=
+app.portafirmes.plugin.flux.firma.usuari=$helium_portafib
+app.portafirmes.plugin.flux.firma.password=helium_portafib
