--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -280,10 +280,9 @@ app.portasignatures.plugin.password=HELIUM
 # Integració amb l' API Plantilles de Flux de Firmes Simple
 # ###
 # Classe del plugin de portafirmes flux de firmes
-app.portafirmes.plugin.flux.firma.class=net.conselldemallorca.helium.integracio.plugins.portasignatures.PortafirmesPluginPortafibFluxSimple
 app.portafirmes.plugin.flux.firma.url=https://dev.caib.es/portafib/common/rest/apiflowtemplatesimple/v1/
-app.portafirmes.plugin.flux.firma.usuari=$ripea_portafib
-app.portafirmes.plugin.flux.firma.password=ripea_portafib
+app.portafirmes.plugin.flux.firma.usuari=$helium_portafib
+app.portafirmes.plugin.flux.firma.password=helium_portafib
 
 
 # ###
