#1645 Incloure l'edició dels fluxos de firma a Helium

--- a/versions/3.2.117/1645.properties
+++ b/versions/3.2.117/1645.properties
@@ -17,3 +17,11 @@ app.portasignatures.plugin.portafib.firmasimpleasync.url=https://se.caib.es/port
 app.portafirmes.plugin.flux.firma.url=https://dev.caib.es/portafib/common/rest/apiflowtemplatesimple/v1/
 app.portafirmes.plugin.flux.firma.usuari=$helium_portafib
 app.portafirmes.plugin.flux.firma.password=helium_portafib
+
+# ###
+# Integració amb el WS SOAP de consulta de càrrecs al Portasignatures
+# ###
+plugin.portafirmes.plugin.flux.entiatws.url=https://dev.caib.es/portafib/ws/v1/PortaFIBUsuariEntitat
+plugin.portafirmes.plugin.flux.entiatws.username=$helium_portafib
+plugin.portafirmes.plugin.flux.entiatws.password=helium_portafib
+plugin.portafirmes.plugin.flux.entiatws.mostrar.persona.carrec=true
