--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -374,16 +374,16 @@
 			<version>${helium.version}</version>
 		</dependency>
 
-		<!--  plugin-validatesignature-afirmacxf 1.0.2 -->
+		<!--  pluginsib-validatesignature-afirmacxf 2.0.7 -->
 		<dependency>
-			<groupId>org.fundaciobit.plugins</groupId>
-			<artifactId>plugin-validatesignature-api</artifactId>
-			<version>1.0.0</version>
+			<groupId>org.fundaciobit.pluginsib.validatecertificate</groupId>
+			<artifactId>pluginsib-validatecertificate-api</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.fundaciobit.plugins</groupId>
-			<artifactId>plugin-validatesignature-afirmacxf</artifactId>
-			<version>1.0.1</version>
+			<groupId>org.fundaciobit.pluginsib.validatesignature</groupId>
+			<artifactId>pluginsib-validatesignature-afirmacxf</artifactId>
+			<version>2.0.7</version>
 			<exclusions>
 				<exclusion>
 					<groupId>xerces</groupId>
