--- a/helium-plugin-api/pom.xml
+++ b/helium-plugin-api/pom.xml
@@ -12,6 +12,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>helium-core-api</artifactId>
+			<version>${helium.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
   			<artifactId>commons-lang</artifactId>
   			<version>${commons-lang.version}</version>
