--- a/versions/3.2.117/1645.properties
+++ b/versions/3.2.117/1645.properties
@@ -7,6 +7,8 @@
 #app.portasignatures.plugin.portafib.base.url=https://se.caib.es/portafib
 app.portasignatures.plugin.portafib.firmasimpleasync.url=https://se.caib.es/portafib/common/rest/apifirmaasyncsimple/v2
 
+app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_perfil=FIRMAAPISIMPLE
+
 # ###################### #
 # PROPIETATS AFEGIDES    #
 # ###################### #
