--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -433,6 +433,10 @@
 					<groupId>org.slf4j</groupId>
 					<artifactId>jul-to-slf4j</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.bouncycastle</groupId>
+					<artifactId>bcprov-jdk15on</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<!-- S'ha d'incloure en el lib de l'ear per a que no agafi la del lib del jboss -->
