--- a/versions/3.3.1/1627.properties
+++ b/versions/3.3.1/1627.properties
@@ -1,2 +1,6 @@
+# ###################### #
+# PROPIETATS AFEGIDES    #
+# ###################### #
+
 app.persones.plugin.ldap.search.filter.userlike=(&(objectClass=user)(|(sAMAccountName=*###*)(|(givenName=*###*)(sn=*###*)))
 app.persones.plugin.jdbc.filter.codename=select usu_codi, usu_nom, usu_nif, usu_codi || '@limit.es' from sc_wl_usuari where upper(usu_codi) like upper('%'||:text||'%') or upper(usu_nom) like upper('%'||:text||'%')
