--- a/doc/resources/properties/updates/helium_update_3.3.1.properties
+++ b/doc/resources/properties/updates/helium_update_3.3.1.properties
@@ -3,11 +3,10 @@
 # ###################### #
 
 
-# IntegraciÛ amb firma de servidor
-app.portasignatures.plugin.portafib.firmasimpleasync.url=https://se.caib.es/portafib/common/rest/apifirmaasyncsimple/v2
+# Integraci√≥ amb firma de servidor
 app.plugin.firma.portafib.plugins.signatureserver.portafib.api_passarela_perfil=FIRMAAPISIMPLE
 
-# IntegraciÛ amb NOTIB #
+# Integraci√≥ amb NOTIB #
 app.notificacio.plugin.url=https://dev.caib.es/notibapi
 
 
@@ -15,26 +14,29 @@ app.notificacio.plugin.url=https://dev.caib.es/notibapi
 # PROPIETATS AFEGIDES    #
 # ###################### #
 
+# Integraci√≥ amb firma de servidor
+app.portasignatures.plugin.portafib.firmasimpleasync.url=https://se.caib.es/portafib/common/rest/apifirmaasyncsimple/v2
+
 # Plugin de dades de persones
 app.persones.plugin.ldap.search.filter.userlike=(&(objectClass=user)(|(sAMAccountName=*###*)(|(givenName=*###*)(sn=*###*)))
 app.persones.plugin.jdbc.filter.codename=select usu_codi, usu_nom, usu_nif, usu_codi || '@limit.es' from sc_wl_usuari where upper(usu_codi) like upper('%'||:text||'%') or upper(usu_nom) like upper('%'||:text||'%')
 
 # ###
-# IntegraciÛ amb l' API Plantilles de Flux de Firmes Simple
+# Integraci√≥ amb l' API Plantilles de Flux de Firmes Simple
 # ###
 app.portafirmes.plugin.flux.firma.url=https://dev.caib.es/portafib/common/rest/apiflowtemplatesimple/v1/
 app.portafirmes.plugin.flux.firma.usuari=$helium_portafib
 app.portafirmes.plugin.flux.firma.password=helium_portafib
 
 # ###
-# IntegraciÛ amb el WS SOAP de consulta de c‡rrecs al Portasignatures
+# Integraci√≥ amb el WS SOAP de consulta de c√†rrecs al Portasignatures
 # ###
 plugin.portafirmes.plugin.flux.entiatws.url=https://dev.caib.es/portafib/ws/v1/PortaFIBUsuariEntitat
 plugin.portafirmes.plugin.flux.entiatws.username=$helium_portafib
 plugin.portafirmes.plugin.flux.entiatws.password=helium_portafib
 plugin.portafirmes.plugin.flux.entiatws.mostrar.persona.carrec=true
 
-# Passarela de firma
+# Passarel¬∑la de firma
 app.plugin.passarelafirma.class=net.conselldemallorca.helium.integracio.plugins.firmaweb.FirmaSimpleWebPluginPortafib
 app.plugin.passarelafirma.plugins.signatureweb.portafib.apifirmawebsimple.endpoint=https://dev.caib.es/portafib/common/rest/apifirmawebsimple/v1/
 app.plugin.passarelafirma.plugins.signatureweb.portafib.apifirmawebsimple.username=$helium_portafibpass
